--- a/index.html
+++ b/index.html
@@ -9,6 +9,93 @@
     <link rel="stylesheet" href="assets/fontawesome/css/all.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <header>
+        <a href="./index.html"><img class="logo" src="./assets/logo/ohmyfood.png" alt="nom de marque"></a> 
+    </header>
+    <main>
+        <section class="location">
+            <i class="fa-sharp fa-solid fa-location-dot"></i>
+            <h1>Paris, Belleville</h1>
+        </section>
+        <section class="intro">
+            <h2>Réservez le menu qui vous convient</h2>
+            <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+        <input type="button" value="Explorer nos restaurants">
+        </section>
+        <section class="working">
+            <h2>Fonctionnement</h2>
+            <div class="working-container">
+                <article>
+                    <h3 class="number">1</h3>
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                    <p>Choisissez un restaurant</p>
+                </article>
+                <article>
+                    <h3 class="number">2</h3>
+                    <i class="fa-solid fa-list"></i>
+                    <p>Composez votre menu</p>
+                </article>
+                <article>
+                    <h3 class="number">3</h3>
+                    <i class="fa-solid fa-store"></i>
+                    <p>Dégustez au restaurant</p>
+                </article>
+            </div>
+        </section>
+        <section class="restaurant">
+            <h2>Restaurants</h2>
+            <div class="restaurant-container">
+            <article>
+                <div class="new">
+                    <p>Nouveau</p>
+                </div>
+                <a href="./menu/menu1.html">
+                    <img src="./assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant La palette du gout">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+                </a>
+                <a class="btn" href="#restaurant">
+                    <i class="fa-regular fa-heart"></i>
+                </a>
+                </article>
+            <article>
+                <div class="new">
+                    <p>Nouveau</p>
+                </div>
+                <a href="./menu/menu2.html">
+                    <img src="./assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant la note enchantée">
+                    <h3>La note enchantée</h3>
+                    <p>Charonne</p>
+                </a>
+                <a class="btn" href="#restaurant">
+                <i class="fa-regular fa-heart"></i>
+                </a>
+            </article>
+            <article>
+                <a href="./menu/menu3.html">
+                <img src="./assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant a la française">
+                <h3>À la française</h3>
+                <p>Cité Rouge</p>
+                </a>
+                <a class="btn" href="#restaurant">
+                <i class="fa-regular fa-heart"></i>
+                </a>
+            </article>
+            <article>
+                <a href="./menu/menu4.html">
+                    <img src="./assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant le délice des sens">
+                    <h3>Le délice des sens</h3>
+                    <p>Folie-Méricourt</p>
+                </a>
+                <a class="btn" href="#restaurant">
+                <i class="fa-regular fa-heart"></i>
+                </a>
+            </article>
+            </div>
+        </section>
+    </main>
+    <footer>
+            <h3>ohmyfood</h3>
+    </footer>
 </body>
 </html>
