--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
     <link rel="stylesheet" href="assets/fontawesome/css/all.css">
 </head>
 <body>
+
+    <div class="loader-container">
+        <div class="dot d1"></div>
+        <div class="dot d2"></div>
+        <div class="dot d3"></div>
+    </div>
+
     <header>
-        <a href="./index.html"><img class="logo" src="./assets/logo/ohmyfood.png" alt="nom de marque"></a> 
+       <h1 class="logo">ohmyfood</h1>
     </header>
     <main>
         <section class="location">
@@ -45,57 +52,69 @@
         <section class="restaurant">
             <h2>Restaurants</h2>
             <div class="restaurant-container">
-            <article>
+            <article class="restaurant-card">
                 <div class="new">
                     <p>Nouveau</p>
                 </div>
                 <a href="./menu/menu1.html">
                     <img src="./assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant La palette du gout">
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
-                </a>
-                <a class="btn" href="#restaurant">
+                    <div class="restaurant-card-bottom">
+                        <h3>La palette du goût</h3>
+                        <p>Ménilmontant</p>
+                    </a>
                     <i class="fa-regular fa-heart"></i>
-                </a>
+                    <i class="fa-solid fa-heart"></i>
+                    </div>
                 </article>
-            <article>
+            <article class="restaurant-card">
                 <div class="new">
                     <p>Nouveau</p>
                 </div>
                 <a href="./menu/menu2.html">
                     <img src="./assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant la note enchantée">
-                    <h3>La note enchantée</h3>
-                    <p>Charonne</p>
-                </a>
-                <a class="btn" href="#restaurant">
-                <i class="fa-regular fa-heart"></i>
-                </a>
+                    <div class="restaurant-card-bottom">
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
+                    </a>
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                    </div>
             </article>
-            <article>
+            <article class="restaurant-card">
                 <a href="./menu/menu3.html">
                 <img src="./assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant a la française">
-                <h3>À la française</h3>
-                <p>Cité Rouge</p>
-                </a>
-                <a class="btn" href="#restaurant">
-                <i class="fa-regular fa-heart"></i>
-                </a>
+                <div class="restaurant-card-bottom">
+                    <h3>À la française</h3>
+                    <p>Cité Rouge</p>
+                    </a>
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                </div>
             </article>
-            <article>
+            <article class="restaurant-card">
                 <a href="./menu/menu4.html">
                     <img src="./assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant le délice des sens">
-                    <h3>Le délice des sens</h3>
-                    <p>Folie-Méricourt</p>
-                </a>
-                <a class="btn" href="#restaurant">
-                <i class="fa-regular fa-heart"></i>
-                </a>
+                    <div class="restaurant-card-bottom">
+                        <h3>Le délice des sens</h3>
+                        <p>Folie-Méricourt</p>
+                    </a>
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                   </div>
             </article>
             </div>
         </section>
     </main>
     <footer>
+        <section class="footer">
             <h3>ohmyfood</h3>
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </section> 
     </footer>
 </body>
 </html>
