--- a/menu/menu1.html
+++ b/menu/menu1.html
@@ -5,10 +5,137 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu1</title>
-    <link rel="stylesheet" href="style.css"> 
-    <link rel="stylesheet" href="assets/fontawesome/css/all.css">
+    <link rel="stylesheet" href="../style.css"> 
+    <link rel="stylesheet" href="../assets/fontawesome/css/all.css">
 </head>
 <body>
-    
+    <header>
+        <section class="header-menu">
+            <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <h1 class="logo">ohmyfood</h1>
+        </section>     
+    </header>
+
+    <img src="../assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant La palette du gout" class="bg-menu">
+
+    <main class="main-menu">
+        <section class="top-menu">
+            <h2>La palette du goût</h2>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
+        </section>
+        <section class="menu-grid">
+            <div class="menu-category">
+               <h3>ENTRÉES</h3>             
+               <div class="menu-item">
+                <div class="menu-item-text">
+                    <h4>Fricassée d'escargot</h4>
+                    <p>Au piment d'espelette</p>
+                </div>
+                <p class="price">25€</p>
+                <div class="check">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+               </div>
+               <div class="menu-item">
+                <div class="menu-item-text">
+                    <h4>Foie gras de canard mi-cuit</h4>
+                    <p>Et ses copeaux de truffe noire</p>
+                </div>
+                <p class="price">35€</p>
+                <div class="check">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+               </div>
+               <div class="menu-item">
+                <div class="menu-item-text">
+                    <h4>Oeuf au plat</h4>
+                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                </div>
+                <p class="price">20€</p>
+                <div class="check">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+               </div>
+            </div>
+            <div class="menu-category">
+                <h3>PLATS</h3>             
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Filet de boeuf aux herbes</h4>
+                     <p>Accompagné de sa ribambelle de légumes</p>
+                 </div>
+                 <p class="price">40€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Parmentier de queue de boeuf</h4>
+                     <p>À la truffe noire sur sa purée de panais</p>
+                 </div>
+                 <p class="price">35€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Filet de turbot</h4>
+                     <p>Aux agrumes</p>
+                 </div>
+                 <p class="price">44€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+            </div>
+            <div class="menu-category">
+                <h3>DESSERTS</h3>             
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Paris-Brest</h4>
+                     <p>Revisité</p>
+                 </div>
+                 <p class="price">18€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Macaron au chocolat d'exception</h4>
+                     <p>Et glace à la vanille de Madagascar</p>
+                 </div>
+                 <p class="price">22€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Mousse au chocolat</h4>
+                     <p>Au piment d'Espelette et à la truffe noire</p>
+                 </div>
+                 <p class="price">23€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+            </div>
+        </section>
+    </main>  
+    <footer>
+        <section class="footer mfooter">
+            <h3>ohmyfood</h3>
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </section> 
+    </footer>
 </body>
 </html>
