all menupage done + add favicon + fix bgmenu

--- a/menu/menu3.html
+++ b/menu/menu3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu3</title>
+    <title>Menu1</title>
     <link rel="stylesheet" href="../style.css"> 
     <link rel="stylesheet" href="../assets/fontawesome/css/all.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
@@ -13,6 +13,136 @@
     <link rel="manifest" href="../assets/favicon/site.webmanifest">
 </head>
 <body>
-    
+    <header>
+        <section class="header-menu">
+            <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <h1 class="logo">ohmyfood</h1>
+        </section>     
+    </header>
+
+    <img src="../assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant À la française" class="bg-menu">
+
+    <main class="main-menu">
+        <section class="top-menu">
+            <h2>À la française</h2>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
+        </section>
+        <section class="menu-grid">
+            <div class="menu-category">
+               <h3>ENTRÉES</h3>             
+               <div class="menu-item">
+                <div class="menu-item-text">
+                    <h4>Tartare de poulpe acidulé</h4>
+                    <p>Aux zestes d'orange</p>
+                </div>
+                <p class="price">25€</p>
+                <div class="check">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+               </div>
+               <div class="menu-item">
+                <div class="menu-item-text">
+                    <h4>Velouté de légumes d'antan</h4>
+                    <p>Carotte, panais, topinambour</p>
+                </div>
+                <p class="price">35€</p>
+                <div class="check">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+               </div>
+               <div class="menu-item">
+                <div class="menu-item-text">
+                    <h4>Soupe à l'oignon</h4>
+                    <p>Revisitée</p>
+                </div>
+                <p class="price">20€</p>
+                <div class="check">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+               </div>
+            </div>
+            <div class="menu-category">
+                <h3>PLATS</h3>             
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Coquilles Saint-Jacques</h4>
+                     <p>Accompagnées d'une purée de panais</p>
+                 </div>
+                 <p class="price">40€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Magret de canard</h4>
+                     <p>Et parmentier de pommes de terre</p>
+                 </div>
+                 <p class="price">35€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                     <p>Sur son lit de gnocchis aux légumes</p>
+                 </div>
+                 <p class="price">44€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+            </div>
+            <div class="menu-category">
+                <h3>DESSERTS</h3>             
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Pétales de violettes glacés</h4>
+                     <p>Et purée de noisettes</p>
+                 </div>
+                 <p class="price">18€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Fondant au chocolat</h4>
+                     <p>Revisité</p>
+                 </div>
+                 <p class="price">22€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Millefeuille croustillant</h4>
+                     <p>Myrtilles et pâte d’amande</p>
+                 </div>
+                 <p class="price">23€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+            </div>
+        </section>
+        <div class="buy">
+            <input type="button" value="Commander">
+        </div>
+    </main>  
+    <footer>
+        <section class="footer mfooter">
+            <h3>ohmyfood</h3>
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </section> 
+    </footer>
 </body>
 </html>
