--- a/menu/menu2.html
+++ b/menu/menu2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu2</title>
+    <title>Menu1</title>
     <link rel="stylesheet" href="../style.css"> 
     <link rel="stylesheet" href="../assets/fontawesome/css/all.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
@@ -13,6 +13,146 @@
     <link rel="manifest" href="../assets/favicon/site.webmanifest">
 </head>
 <body>
-    
+    <header>
+        <section class="header-menu">
+            <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <h1 class="logo">ohmyfood</h1>
+        </section>     
+    </header>
+
+    <img src="../assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant La note enchantée" class="bg-menu">
+
+    <main class="main-menu">
+        <section class="top-menu">
+            <h2>La note enchantée</h2>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
+        </section>
+        <section class="menu-grid">
+            <div class="menu-category">
+               <h3>ENTRÉES</h3>             
+               <div class="menu-item">
+                <div class="menu-item-text">
+                    <h4>Ravioles de foie gras</h4>
+                    <p>Accompagnés de leur crème à la truffe</p>
+                </div>
+                <p class="price">25€</p>
+                <div class="check">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+               </div>
+               <div class="menu-item">
+                <div class="menu-item-text">
+                    <h4>Caviar osciètre</h4>
+                    <p>Sur blini à la farine de blé noir</p>
+                </div>
+                <p class="price">35€</p>
+                <div class="check">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+               </div>
+               <div class="menu-item">
+                <div class="menu-item-text">
+                    <h4>Homard et espuma de potiron</h4>
+                    <p>Mariné aux zestes d'orange</p>
+                </div>
+                <p class="price">20€</p>
+                <div class="check">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+               </div>
+               <div class="menu-item">
+                <div class="menu-item-text">
+                    <h4>Foie gras de canard cuit entier</h4>
+                    <p>Confiture de figue et pain toasté</p>
+                </div>
+                <p class="price">35€</p>
+                <div class="check">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+               </div>
+            </div>
+            <div class="menu-category">
+                <h3>PLATS</h3>             
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Noix de coquilles Saint-Jacques</h4>
+                     <p>Sur lit de purée de céleri-rave</p>
+                 </div>
+                 <p class="price">40€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Langoustine poêlée</h4>
+                     <p>Purée de patate douce</p>
+                 </div>
+                 <p class="price">35€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Mijoté de queue de boeuf</h4>
+                     <p>Et riz sauvage aux zestes de citron</p>
+                 </div>
+                 <p class="price">44€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+            </div>
+            <div class="menu-category">
+                <h3>DESSERTS</h3>             
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Macaron noisette et chocolat</h4>
+                     <p>Glace au caramel brun et sel de Guérande</p>
+                 </div>
+                 <p class="price">18€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Baba au rhum revisité</h4>
+                     <p>Avec son coulis de citron</p>
+                 </div>
+                 <p class="price">22€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Tarte au citron meringuée</h4>
+                     <p>Déstructurée</p>
+                 </div>
+                 <p class="price">23€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+            </div>
+        </section>
+        <div class="buy">
+            <input type="button" value="Commander">
+        </div>
+    </main>  
+    <footer>
+        <section class="footer mfooter">
+            <h3>ohmyfood</h3>
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </section> 
+    </footer>
 </body>
 </html>
