--- a/menu/menu4.html
+++ b/menu/menu4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu4</title>
+    <title>Menu1</title>
     <link rel="stylesheet" href="../style.css"> 
     <link rel="stylesheet" href="../assets/fontawesome/css/all.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
@@ -13,6 +13,136 @@
     <link rel="manifest" href="../assets/favicon/site.webmanifest">
 </head>
 <body>
-    
+    <header>
+        <section class="header-menu">
+            <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <h1 class="logo">ohmyfood</h1>
+        </section>     
+    </header>
+
+    <img src="../assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant Le délice des sens" class="bg-menu">
+
+    <main class="main-menu">
+        <section class="top-menu">
+            <h2>Le délice des sens</h2>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
+        </section>
+        <section class="menu-grid">
+            <div class="menu-category">
+               <h3>ENTRÉES</h3>             
+               <div class="menu-item">
+                <div class="menu-item-text">
+                    <h4>Tartare de thon</h4>
+                    <p>Assaisonné au yuzu</p>
+                </div>
+                <p class="price">25€</p>
+                <div class="check">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+               </div>
+               <div class="menu-item">
+                <div class="menu-item-text">
+                    <h4>Bouchée de homard croustillant</h4>
+                    <p>Et sa farandole de petits légumes</p>
+                </div>
+                <p class="price">35€</p>
+                <div class="check">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+               </div>
+               <div class="menu-item">
+                <div class="menu-item-text">
+                    <h4>Velouté de cèpes</h4>
+                    <p>Aux truffes</p>
+                </div>
+                <p class="price">20€</p>
+                <div class="check">
+                    <i class="fa-solid fa-check"></i>
+                </div>
+               </div>
+            </div>
+            <div class="menu-category">
+                <h3>PLATS</h3>             
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Poulet rôti aux herbes de Provence</h4>
+                     <p>Et sa crème de truffe</p>
+                 </div>
+                 <p class="price">40€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Langouste rôtie</h4>
+                     <p>Et ses légumes de saison</p>
+                 </div>
+                 <p class="price">35€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Côte de boeuf Angus</h4>
+                     <p>Et sa purée de panais</p>
+                 </div>
+                 <p class="price">44€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+            </div>
+            <div class="menu-category">
+                <h3>DESSERTS</h3>             
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Farandole de desserts</h4>
+                     <p>Du chef</p>
+                 </div>
+                 <p class="price">18€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Crème brulée</h4>
+                     <p>Revisitée</p>
+                 </div>
+                 <p class="price">22€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+                <div class="menu-item">
+                 <div class="menu-item-text">
+                     <h4>Tiramisu</h4>
+                     <p>À la noisette</p>
+                 </div>
+                 <p class="price">23€</p>
+                 <div class="check">
+                     <i class="fa-solid fa-check"></i>
+                 </div>
+                </div>
+            </div>
+        </section>
+        <div class="buy">
+            <input type="button" value="Commander">
+        </div>
+    </main>  
+    <footer>
+        <section class="footer mfooter">
+            <h3>ohmyfood</h3>
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </section> 
+    </footer>
 </body>
 </html>
