--- a/index.html
+++ b/index.html
@@ -57,11 +57,9 @@
             <h2>Restaurants</h2>
             <div class="restaurant-container">
             <article class="restaurant-card">
-                <div class="new">
-                    <p>Nouveau</p>
-                </div>
                 <a href="./menu/menu1.html">
                     <img src="./assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant La palette du gout">
+                    <span class="new">Nouveau</span>
                     <div class="restaurant-card-bottom">
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
@@ -71,11 +69,9 @@
                     </div>
                 </article>
             <article class="restaurant-card">
-                <div class="new">
-                    <p>Nouveau</p>
-                </div>
                 <a href="./menu/menu2.html">
                     <img src="./assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant la note enchantée">
+                    <span class="new">Nouveau</span>
                     <div class="restaurant-card-bottom">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
